[ FIX ] - Issues regarding the unloading of a project
[ FIX ] - "Loading..." and "Running task" messages are not aligned
[ ADD ] - Reload tasks when project changes
[ ADD ] - Use shortcut Ctrl-Alt-D to run default task
[ ADD ] - Show console message when no task file is found
[ UPDATE ] - Turn Grunt icon "on" also when tasks are being loaded
[ UPDATE ] - Handle  some lint errors/warnings

--- a/style/style.css
+++ b/style/style.css
@@ -43,14 +43,17 @@
 }
 
 
-.grunt-hide 
-{
-	display: none;
-}
+
 
 .grunt-message
 {
 	margin-left: 5px;
+	display: inline-block;
+}
+
+.grunt-hide 
+{
+	display: none;
 }
 
 .grunt-console
